Fixed #4 - Added draggable bar to allow vertically resizing charts.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "atom-space-pen-views": "2.2.0",
-    "jg-c3": "0.4.11-rc4-2"
+    "jg-c3": "0.4.11-rc4-2",
+    "resizable": "1.1.1"
   }
 }
